@@ -14,6 +14,11 @@ Synopsis
                               bson_t *reply,
                               bson_error_t *error);
 
+Deprecated
+----------
+
+This helper function is deprecated and should not be used in new code. Run the `validate <https://docs.mongodb.com/manual/reference/command/validate/>`_ command directly with :symbol:`mongoc_client_read_command_with_opts()` instead.
+
 Parameters
 ----------
 
