@@ -207,7 +207,7 @@ MONGOC_EXPORT (bool)
 mongoc_client_get_server_status (mongoc_client_t *client,
                                  mongoc_read_prefs_t *read_prefs,
                                  bson_t *reply,
-                                 bson_error_t *error);
+                                 bson_error_t *error) BSON_GNUC_DEPRECATED;
 MONGOC_EXPORT (int32_t)
 mongoc_client_get_max_message_size (mongoc_client_t *client)
    BSON_GNUC_DEPRECATED;
