@@ -51,6 +51,12 @@ bugfixes:
     connection can't be established after 250ms then IPv4 is tried in parallel.
     Whichever succeeds connection first cancels the other. The successful DNS
     result is cached for 10 minutes.
+  * The following helper functions do not work with mongoc_client_session_t,
+    they are deprecated in favor of running MongoDB commands directly with a
+    function like mongoc_client_read_command_with_opts:
+      mongoc_client_get_server_status
+      mongoc_collection_stats
+      mongoc_collection_validate
 
 
 mongo-c-driver 1.9.4
